--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,8 @@
 {
 	"name": "42Tokyo - pipex",
 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
-	"features": {},
 	"postCreateCommand": {
-		"install-packages": "sudo apt-get update && sudo apt-get install -y build-essential valgrind gcc make python3-pip",
+		"install-packages": "sudo apt-get update && sudo apt-get install -y build-essential valgrind python3-pip",
 		"install-python-tools": "pip3 install norminette c_formatter_42",
 		"install-claude": "curl -fsSL https://claude.ai/install.sh | bash"
 	},
